--- a/Aula1_Comandos_Básicos.ipynb
+++ b/Aula1_Comandos_Básicos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9VfOzOWjNQYBbWVb86+nv",
+      "authorship_tag": "ABX9TyMB8o+hz6Lp8syh1YvVmt+D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -371,15 +371,14 @@
         "**16. Salário**\n",
         "\n",
         "Crie um programa que leia o número de dias trabalhados em um mês e mostre o\n",
-        "salário de um funcionário, sabendo que ele trabalha 8 horas por dia e ganha R$25\n",
-        "por hora trabalhada.\n",
+        "salário de um funcionário, sabendo que ele trabalha 8 horas por dia e ganha R\\$25,00 por hora trabalhada.\n",
         "\n",
         "**17. Locadora**\n",
         "\n",
         "A locadora de carros precisa da sua ajuda para cobrar seus serviços. Escreva\n",
         "um programa que pergunte a quantidade de Km percorridos por um carro alugado e a\n",
         "quantidade de dias pelos quais ele foi alugado. Calcule o preço total a pagar,\n",
-        "sabendo que o carro custa R$90 por dia e `R$0,20` por Km rodado.\n",
+        "sabendo que o carro custa R\\$ 90,00 por dia e R\\$ 0,20 por Km rodado.\n",
         "\n",
         "**18. Custo de imposto**\n",
         "\n",
