--- a/Readme
+++ b/Readme
@@ -1,1 +1,9 @@
-Readme
+Disciplina de Algoritmos - Python
+1 semestre de 2025
+Prof. Wellington Roque
+
+Download Python
+https://www.python.org/download/other/
+
+Download Pycharm versão Community
+https://www.jetbrains.com/pycharm/download/other.html
