--- a/Aula1_Comandos_Básicos.ipynb
+++ b/Aula1_Comandos_Básicos.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN59bFhfqedzxqLUp/HC025",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/WellingtonRoque/Algoritmos/blob/main/Aula1_Comandos_B%C3%A1sicos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/murillomsouza/Algoritmos/blob/main/Aula1_Comandos_B%C3%A1sicos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -394,6 +393,78 @@
       "metadata": {
         "id": "DTUv9YCMGiqM"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#---Exercicio 1---\n",
+        "name = input(print('Digite o nome do funcionário: '))\n",
+        "salario =  float(input(print('Digite o salário em Reais: ')))\n",
+        "print(f'O funcionário {name}, recebe R${salario}')\n"
+      ],
+      "metadata": {
+        "id": "TLXdhk-zBgdS",
+        "outputId": "910cf0f6-66fa-46e9-9f05-367e57a9cb60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o nome do funcionário: \n",
+            "NoneMurillo Miguel Ozorio de Souza\n",
+            "Digite o salário em Reais: \n",
+            "None2400.00\n",
+            "O funcionário Murillo Miguel Ozorio de Souza, recebe R$2400.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#---Exercicio 2---\n",
+        "nt1 = float(input(print('Digite a primeira nota: ')))\n",
+        "nt2 = float(input(print('Digite e segunda nota: ')))\n",
+        "media = (nt1 + nt2)/2\n",
+        "print(f'A média desse aluno é: {media}')\n"
+      ],
+      "metadata": {
+        "id": "EJDH3z6GCpkG",
+        "outputId": "6fe89092-7b4a-4eac-f403-1551a60d2b3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a primeira nota: \n",
+            "None8\n",
+            "Digite e segunda nota: \n",
+            "None4\n",
+            "A média desse aluno é: 6.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#---Exercicio 3---\n"
+      ],
+      "metadata": {
+        "id": "S19qTLFdDbac"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
