--- a/Aula2_EstruturadeDecisao.ipynb
+++ b/Aula2_EstruturadeDecisao.ipynb
@@ -808,11 +808,204 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Esse numero é impar\n"
+          ]
+        }
+      ],
+      "source": [
+        "\"\"\"Exercicio 5\"\"\"\n",
+        "numero = float(input('Digite um numero:'))\n",
+        "par = numero % 2 \n",
+        "impar = numero / 2 \n",
+        "if par == 0:\n",
+        "    print('Esse numero é par')\n",
+        "else:\n",
+        "    print('Esse numero é impar')\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Usuário ou senha incorreto\n"
+          ]
+        }
+      ],
+      "source": [
+        "\"\"\"Exercicio 6\"\"\"\n",
+        "user = input('Nome de usuário: ')\n",
+        "password = input('Digite sua senha: ')\n",
+        "type(user)\n",
+        "type(password)\n",
+        "if user.islower() and user.isalnum() and password.isalnum():\n",
+        "    print(f'Sejá bem-vindo {user}.')\n",
+        "else:\n",
+        "    print('Usuário ou senha incorreto')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 51,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Nota B\n"
+          ]
+        }
+      ],
+      "source": [
+        "\"\"\"Exercicio 7\"\"\"\n",
+        "nota = int(input('Digite a nota do aluno de 1 a 100:'))\n",
+        "if nota > 90:\n",
+        "    print('Nota A')\n",
+        "elif 80 <= nota <= 89:\n",
+        "    print('Nota B') \n",
+        "elif 70 <= nota <= 79:\n",
+        "    print('Nota C') \n",
+        "elif 60 <= nota <= 69:\n",
+        "    print('Nota D') \n",
+        "else:\n",
+        "    print('Nota F') \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Seu imc é 28.34 que é considerado sobrepeso\n"
+          ]
+        }
+      ],
+      "source": [
+        "\"\"\"Exercicio 8\"\"\"\n",
+        "altura = float(input('Digite sua altura em metros (ex 1.80 metros):'))\n",
+        "peso = float(input('Digite seu peso em Quilogramas (ex 75.800 Kg)'))\n",
+        "imc = peso / (altura * altura)\n",
+        "if imc < 18.5:\n",
+        "    print(f'Seu imc é {imc:.2f} que é considerado magreza')\n",
+        "elif 18.5 <= imc <= 24.9:\n",
+        "    print(f'Seu imc é {imc:.2f} que é considerado normal')\n",
+        "elif 25.0 <= imc <= 29.9:\n",
+        "    print(f'Seu imc é {imc:.2f} que é considerado sobrepeso')\n",
+        "elif 30.0 <= imc <= 39.9:\n",
+        "    print(f'Seu imc é {imc:.2f} que é considerado obesidade')\n",
+        "else:\n",
+        "    print(f'Seu imc é {imc:.2f} que é considerado obesidade grave')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 63,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "O valor descontado é de R$140.0, e o valor final do produto é R$1260.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "\"\"\"Exercicio 9\"\"\"\n",
+        "preco = float(input('Digite o valor do produto em reais:'))\n",
+        "desconto = preco * 0.10\n",
+        "precofinal = preco - desconto\n",
+        "if desconto >= 100.00:\n",
+        "    print(f'O valor descontado é de R${desconto}, e o valor final do produto é R${precofinal}')\n",
+        "else:\n",
+        "    print(f'O valor do produto com desconto é de R${precofinal}')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Para inciar por favor insira o cartão.\n",
+            "Deposito realizado com sucesso. O saldo atual de sua conta é de R$6000.0\n"
+          ]
+        }
+      ],
       "source": [
-        "\"\"\"Exercicio 5\"\"\"\n"
+        "\"\"\"Exercicio 10\"\"\"\n",
+        "#----Considerando que o usuário tem R$1000.00 disponíveis \n",
+        "import time\n",
+        "saldo_inicial = 1000.00\n",
+        "print('Para inciar por favor insira o cartão.')\n",
+        "time.sleep(5.0)\n",
+        "decisao = input('Para consultar saldo digite 1 \\n '\n",
+        "'Para sacar digite 2 \\n '\n",
+        "'Para realizar depósito digite 3\\n')\n",
+        "if decisao == '1':\n",
+        "    print('Seu saldo é de R$1000.00')\n",
+        "elif decisao == '2':\n",
+        "    saque = float(input('digite o valor desejado:'))\n",
+        "    if saque > saldo_inicial:\n",
+        "        print('Saldo insufiente para operação.')\n",
+        "    else:\n",
+        "        saldo_apos_saque = saldo_inicial - saque\n",
+        "        print(f'Saque realizado! Seu saldo atualizado é de R${saldo_apos_saque:.2f}')\n",
+        "elif decisao == '3':\n",
+        "    deposito = float(input('Digite o valor a ser depositado: '))\n",
+        "    saldo_apos_deposito = saldo_inicial + deposito\n",
+        "    if deposito <= 0:\n",
+        "        print('Valor inválido, tente novamente.')\n",
+        "    else:\n",
+        "        print(f'Deposito realizado com sucesso. O saldo atual de sua conta é de R${saldo_apos_deposito:.2f}')\n",
+        "else:\n",
+        "    print('Erro, nemnhuma opção selecionada.')\n",
+        "        "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 82,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "O jogador tem 36 anos e está na categoria Veterano.\n"
+          ]
+        }
+      ],
+      "source": [
+        "\"\"\"Exericio 11\"\"\"\n",
+        "idade = int(input('Digite a idade do jogador:'))\n",
+        "if idade < 18:\n",
+        "    categoria = 'Juvenil'\n",
+        "elif 18 <= idade <= 35:\n",
+        "    categoria = 'Adulto'\n",
+        "else:\n",
+        "    categoria = 'Veterano'\n",
+        "print(f'O jogador tem {idade} anos e está na categoria {categoria}.')\n"
       ]
     }
   ],
