--- a/Aula1_Comandos_Básicos.ipynb
+++ b/Aula1_Comandos_Básicos.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/murillomsouza/Algoritmos/blob/main/Aula1_Comandos_B%C3%A1sicos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -402,8 +402,8 @@
       ],
       "source": [
         "\"\"\"Exercicio 1\"\"\"\n",
-        "name = input(print('Digite o nome do funcionário: '))\n",
-        "salario =  float(input(print('Digite o salário em Reais: ')))\n",
+        "name = input('Digite o nome do funcionário: '))\n",
+        "salario =  float(input('Digite o salário em Reais: ')))\n",
         "print(f'O funcionário {name}, recebe R${salario}')\n"
       ]
     },
@@ -432,8 +432,8 @@
       ],
       "source": [
         "\"\"\"Exercicio 2\"\"\"\n",
-        "nt1 = float(input(print('Digite a primeira nota: ')))\n",
-        "nt2 = float(input(print('Digite e segunda nota: ')))\n",
+        "nt1 = float(input('Digite a primeira nota: ')))\n",
+        "nt2 = float(input('Digite e segunda nota: ')))\n",
         "media = (nt1 + nt2)/2\n",
         "print(f'A média desse aluno é: {media}')\n"
       ]
@@ -456,7 +456,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "rzi4SM0CK8Is"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 4\"\"\"\n",
@@ -468,7 +470,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "cSjf2IjqK8Is"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 5\"\"\"\n",
@@ -480,7 +484,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "blFprN3gK8Is"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 6\"\"\"\n",
@@ -493,7 +499,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "wLWnitudK8Is"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 7\"\"\"\n",
@@ -506,7 +514,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "A0m5S1AMK8Is"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 8\"\"\"\n",
@@ -520,7 +530,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "JNa2RfAsK8It"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 9\"\"\"\n",
@@ -532,15 +544,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 11,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y3jODEf7K8It",
+        "outputId": "ee055db4-762c-4aa9-80f1-7c7c5e4bb4d7"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o primeiro número: 7\n",
+            "Digite o segundo número: 8\n",
+            "Não são multiplos\n"
+          ]
+        }
+      ],
       "source": [
         "\"\"\"Exercicio 10\"\"\"\n",
         "number1 = float(input('Digite o primeiro número: '))\n",
         "number2 = float(input('Digite o segundo número: '))\n",
-        "multi = number1%number2\n",
-        "if multi == 0:\n",
+        "if number1 % number2 == 0:\n",
+        "    print('São multiplos')\n",
+        "elif number2 % number1 == 0:\n",
         "    print('São multiplos')\n",
         "else:\n",
         "    print('Não são multiplos')"
@@ -548,8 +577,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "kbiimb0pK8It",
+        "outputId": "2c326aa0-eea5-4fb7-cd8e-f436cfd37a05"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -569,7 +601,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "BlMDrH5jK8It"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 12\"\"\"\n",
@@ -581,7 +615,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "MSMgCHQ-K8It"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 13\"\"\"\n",
@@ -594,7 +630,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "aM-ndJmdK8It"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 14\"\"\"\n",
@@ -607,7 +645,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "lTjS6ceEK8It"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 15\"\"\"\n",
@@ -620,7 +660,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "pbVxnxfrK8Iu"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 16\"\"\"\n",
@@ -632,7 +674,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "OyYCE4TaK8Iu"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 17\"\"\"\n",
@@ -645,7 +689,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "AOl7NAqWK8Iu"
+      },
       "outputs": [],
       "source": [
         "\"\"\"Exercicio 18\"\"\"\n",
@@ -657,8 +703,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
